--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,23 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    # Service containers to run with `container-job`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:15
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POStGRES_DB: simple_bank
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -22,6 +39,9 @@ jobs:
 
       - name: Check out code into Go module directory
         uses: actions/checkout@v3
+
+      - name: Run migrations
+        run: make migrateup
 
       - name: Test
         run: make test
