--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,12 @@ jobs:
       - name: Check out code into Go module directory
         uses: actions/checkout@v3
 
+      - name: Install golang-migrate
+        uses: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate.linux-amd64 /usr/bin/
+          which migrate
+
       - name: Run migrations
         run: make migrateup
 
