--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        image: postgres:15
+        image: postgres:15-alpine3.18
         # Provide the password for postgres
         env:
           POSTGRES_USER: root
@@ -45,7 +45,7 @@ jobs:
       - name: Install golang-migrate
         run: |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
-          sudo mv migrate /usr/bin/.
+          sudo mv migrate /usr/bin/
           which migrate
 
       - name: Run migrations
